[gd_scene load_steps=80 format=3 uid="uid://ftqqj6113t28"]

[ext_resource type="Script" path="res://Scripts/Enemy/TorchGoblin/goblin_torch.gd" id="1_dauif"]
[ext_resource type="Shader" path="res://Scenes/Shaders/player_damage.gdshader" id="2_oolxi"]
[ext_resource type="Texture2D" uid="uid://b0q2abkqxi5xa" path="res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/Red/Torch_Red.png" id="3_xxij7"]
[ext_resource type="Texture2D" uid="uid://rp2jr6y4kehn" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Dead/Dead.png" id="4_c7y5k"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyStateMachine.gd" id="5_r0864"]
[ext_resource type="Script" path="res://Scripts/Enemy/States/EnemyWander.gd" id="6_yix5a"]
[ext_resource type="Script" path="res://Scripts/Enemy/States/EnemyFollow.gd" id="7_uqvvm"]
[ext_resource type="Script" path="res://Scripts/Enemy/States/EnemyDead.gd" id="8_07poj"]
[ext_resource type="Script" path="res://Scripts/Enemy/States/EnemyStun.gd" id="9_errv7"]
[ext_resource type="Texture2D" uid="uid://cn8p116js2bii" path="res://Assets/light.png" id="10_n81kv"]
[ext_resource type="Script" path="res://Scripts/Enemy/States/EnemyKnockback.gd" id="10_ri2kj"]
[ext_resource type="Script" path="res://Scripts/General/Hitbox/Hitbox.gd" id="11_awy5v"]
[ext_resource type="AudioStream" uid="uid://c6tu0rlhdlxi5" path="res://Assets/SFX/swordhit.mp3" id="12_iomp7"]
[ext_resource type="PackedScene" uid="uid://cng6qu26gskpd" path="res://Scenes/Enemy/TorchGoblin/TorchWooshAudio/TorchWooshAudio.tscn" id="13_bni6b"]
[ext_resource type="Script" path="res://Scripts/General/Hurtbox/Hurtbox.gd" id="13_poxpv"]
[ext_resource type="AudioStream" uid="uid://bgon2yy7kfinq" path="res://Assets/SFX/goblin_player_detected.mp3" id="14_duprp"]
[ext_resource type="AudioStream" uid="uid://csqgapdfuyj83" path="res://Assets/SFX/goblin_follow.mp3" id="15_7505l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d00ob"]
shader = ExtResource("2_oolxi")
shader_parameter/opacity = 1.0
shader_parameter/r = null
shader_parameter/g = null
shader_parameter/b = null
shader_parameter/mix_color = 0.0

[sub_resource type="Animation" id="Animation_54xf7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeathSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lep1j"]
resource_name = "attack"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TorchWooshAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_torch"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TorchPivot/TorchAttackPoint/TorchArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_jn0ld"]
resource_name = "attack_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TorchWooshAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_torch"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TorchPivot/TorchAttackPoint/TorchArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_4ct7l"]
resource_name = "attack_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TorchWooshAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_torch"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TorchPivot/TorchAttackPoint/TorchArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_8bemg"]
resource_name = "death"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_llqhb"]
resource_name = "idle"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_remst"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dieqk"]
_data = {
"RESET": SubResource("Animation_54xf7"),
"attack": SubResource("Animation_lep1j"),
"attack_down": SubResource("Animation_jn0ld"),
"attack_up": SubResource("Animation_4ct7l"),
"death": SubResource("Animation_8bemg"),
"idle": SubResource("Animation_llqhb"),
"run": SubResource("Animation_remst")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qss17"]
shader = ExtResource("2_oolxi")
shader_parameter/opacity = 1.0
shader_parameter/r = null
shader_parameter/g = null
shader_parameter/b = null
shader_parameter/mix_color = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_66jh6"]
atlas = ExtResource("3_xxij7")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_32so5"]
atlas = ExtResource("3_xxij7")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3p8l"]
atlas = ExtResource("3_xxij7")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb60i"]
atlas = ExtResource("3_xxij7")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8pim"]
atlas = ExtResource("3_xxij7")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk64k"]
atlas = ExtResource("3_xxij7")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_msd7o"]
atlas = ExtResource("3_xxij7")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eqko"]
atlas = ExtResource("3_xxij7")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_whemj"]
atlas = ExtResource("3_xxij7")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_una2y"]
atlas = ExtResource("3_xxij7")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5du2"]
atlas = ExtResource("3_xxij7")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr1km"]
atlas = ExtResource("3_xxij7")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpflb"]
atlas = ExtResource("3_xxij7")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pojf2"]
atlas = ExtResource("3_xxij7")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7d77"]
atlas = ExtResource("3_xxij7")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_peiba"]
atlas = ExtResource("3_xxij7")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpb4p"]
atlas = ExtResource("3_xxij7")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3utio"]
atlas = ExtResource("3_xxij7")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofw2b"]
atlas = ExtResource("4_c7y5k")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbfo1"]
atlas = ExtResource("4_c7y5k")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1lc7"]
atlas = ExtResource("4_c7y5k")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_axxod"]
atlas = ExtResource("4_c7y5k")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_em22s"]
atlas = ExtResource("4_c7y5k")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi4dn"]
atlas = ExtResource("4_c7y5k")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_plxid"]
atlas = ExtResource("4_c7y5k")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_exa0o"]
atlas = ExtResource("4_c7y5k")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_grb2w"]
atlas = ExtResource("4_c7y5k")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qbea"]
atlas = ExtResource("4_c7y5k")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mxd1"]
atlas = ExtResource("4_c7y5k")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6ypw"]
atlas = ExtResource("4_c7y5k")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nbe6"]
atlas = ExtResource("4_c7y5k")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2par"]
atlas = ExtResource("4_c7y5k")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bagok"]
atlas = ExtResource("4_c7y5k")
region = Rect2(512, 27, 128, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0ckc"]
atlas = ExtResource("3_xxij7")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7eos"]
atlas = ExtResource("3_xxij7")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3ils"]
atlas = ExtResource("3_xxij7")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1id87"]
atlas = ExtResource("3_xxij7")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2hpt"]
atlas = ExtResource("3_xxij7")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb0rb"]
atlas = ExtResource("3_xxij7")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk6k5"]
atlas = ExtResource("3_xxij7")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdy76"]
atlas = ExtResource("3_xxij7")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2h2f"]
atlas = ExtResource("3_xxij7")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2exm"]
atlas = ExtResource("3_xxij7")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmeci"]
atlas = ExtResource("3_xxij7")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vo0t"]
atlas = ExtResource("3_xxij7")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_58s4q"]
atlas = ExtResource("3_xxij7")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_xg5rr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_66jh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32so5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3p8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb60i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8pim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk64k")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_msd7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eqko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whemj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_una2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5du2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr1km")
}],
"loop": false,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpflb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pojf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7d77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peiba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpb4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3utio")
}],
"loop": false,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofw2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbfo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1lc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axxod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em22s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi4dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plxid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exa0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grb2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qbea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mxd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6ypw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nbe6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2par")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bagok")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0ckc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7eos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3ils")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1id87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2hpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb0rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk6k5")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdy76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2h2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2exm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmeci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vo0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58s4q")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hqfg7"]
radius = 25.0
height = 56.6667

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_khh3g"]
radius = 34.0
height = 72.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_67jhe"]
blend_mode = 1
light_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_jowbk"]
radius = 92.8559

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eysye"]
size = Vector2(44, 94)

[node name="goblin_torch" type="CharacterBody2D" groups=["Enemy"]]
z_index = 1
scale = Vector2(0.15, 0.15)
motion_mode = 1
script = ExtResource("1_dauif")
vision_rotation_offset_deg = -90.0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_d00ob")
texture = ExtResource("3_xxij7")
hframes = 7
vframes = 6

[node name="DeathSprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_c7y5k")
hframes = 7
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dieqk")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
y_sort_enabled = true
material = SubResource("ShaderMaterial_qss17")
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_xg5rr")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
z_index = 1
y_sort_enabled = true
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_hqfg7")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "enemy", "dead_state")]
script = ExtResource("5_r0864")
initial_state = NodePath("Wander")
enemy = NodePath("..")
dead_state = NodePath("Dead")

[node name="Wander" type="Node" parent="StateMachine" node_paths=PackedStringArray("follow_state", "knockback_state", "dead_state", "detection_area", "attack_area")]
script = ExtResource("6_yix5a")
follow_state = NodePath("../Follow")
knockback_state = NodePath("../Knockback")
dead_state = NodePath("../Dead")
detection_area = NodePath("../../DetectionArea")
attack_area = NodePath("../../AttackArea")

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("wander_state", "knockback_state", "dead_state", "detection_area", "attack_area")]
script = ExtResource("7_uqvvm")
wander_state = NodePath("../Wander")
knockback_state = NodePath("../Knockback")
dead_state = NodePath("../Dead")
detection_area = NodePath("../../DetectionArea")
attack_area = NodePath("../../AttackArea")
use_attack_transition_delay = false

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("8_07poj")

[node name="Stun" type="Node" parent="StateMachine" node_paths=PackedStringArray("wander_state", "follow_state", "dead_state")]
script = ExtResource("9_errv7")
wander_state = NodePath("../Wander")
follow_state = NodePath("../Follow")
dead_state = NodePath("../Dead")

[node name="Knockback" type="Node" parent="StateMachine" node_paths=PackedStringArray("stun_state", "dead_state")]
script = ExtResource("10_ri2kj")
knockback_distance = 15.0
stun_state = NodePath("../Stun")
dead_state = NodePath("../Dead")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(3.33333, 18.3333)
script = ExtResource("11_awy5v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2(-4, -19)
shape = SubResource("CapsuleShape2D_khh3g")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="DetectionArea"]
polygon = PackedVector2Array(-16, 0, 16, 0, 500, 800, -500, 800)

[node name="Polygon2D" type="Polygon2D" parent="DetectionArea"]
material = SubResource("CanvasItemMaterial_67jhe")
color = Color(1, 0.772549, 0, 0.156863)
texture = ExtResource("10_n81kv")
texture_offset = Vector2(650, 300)
texture_scale = Vector2(0.3, 0.3)
polygon = PackedVector2Array(-16, 0, 16, 0, 625, 1000, -625, 1000)

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_jowbk")

[node name="TimerTakeDamage" type="Timer" parent="."]
wait_time = 0.3

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = 1
y_sort_enabled = true
layout_direction = 1
offset_left = -45.0
offset_top = -81.0
offset_right = 45.0
offset_bottom = -69.0
max_value = 4.0
step = 1.0
value = 4.0
rounded = true
show_percentage = false

[node name="StaminaBar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0.231373, 0.635294, 0, 1)
z_index = 1
y_sort_enabled = true
layout_direction = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -12.0
offset_right = 90.0
grow_vertical = 0
rounded = true
show_percentage = false

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-3, -25)
scale = Vector2(1.015, 1.015)
color = Color(1, 0.835294, 0, 1)
energy = 0.8
texture = ExtResource("10_n81kv")

[node name="TorchPivot" type="Marker2D" parent="."]

[node name="TorchAttackPoint" type="Marker2D" parent="TorchPivot"]

[node name="TorchArea" type="Area2D" parent="TorchPivot/TorchAttackPoint" groups=["GoblinTorch"]]
script = ExtResource("13_poxpv")
damage = 1
team = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="TorchPivot/TorchAttackPoint/TorchArea"]
position = Vector2(53.3333, -13.3333)
shape = SubResource("RectangleShape2D_eysye")
disabled = true

[node name="TimerStaminaRegen" type="Timer" parent="."]

[node name="TimerStaminaRegenStart" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="TimerStun" type="Timer" parent="."]
wait_time = 0.2

[node name="TimerKnockback" type="Timer" parent="."]
wait_time = 0.2

[node name="KnockbackTween" type="Node" parent="."]

[node name="SwordHitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_iomp7")
volume_db = -20.0

[node name="TorchWooshAudio" parent="." instance=ExtResource("13_bni6b")]
volume_db = -30.0

[node name="PlayerDetectedAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_duprp")
volume_db = -23.0

[node name="GoblinFollowAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_7505l")
volume_db = -25.0
attenuation = 1e-05

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="TimerTakeDamage" to="." method="_on_timer_take_damage_timeout"]
[connection signal="timeout" from="TimerStaminaRegen" to="." method="_on_timer_stamina_regen_timeout"]
[connection signal="timeout" from="TimerStaminaRegenStart" to="." method="_on_timer_stamina_regen_start_timeout"]
[connection signal="timeout" from="TimerStun" to="." method="_on_timer_stun_timeout"]
[connection signal="timeout" from="TimerKnockback" to="." method="_on_timer_knockback_timeout"]
